rest of emishi-jomon tree finished

--- a/localization/english/missions/jomon_missions_l_english.yml
+++ b/localization/english/missions/jomon_missions_l_english.yml
@@ -258,10 +258,10 @@
  emishi_missions_task_10_DESC:0 "The term #E Emishi#! would come to group together the last of the #E Jomon#! cultures on #T Honshu#!, including the #Y Dewa#!, #Y Sunazawa#!, and #Y Sirakawa#! peoples. Once united, a great #E Pan-Emishi#! tribe would stand against any #E Yayoi#! or other invadors of what we call home."
 
  emishi_missions_task_11:0 "Disparate Differences"
- emishi_missions_task_11_DESC:0 "We the [GetCulture('wa').GetName|Y] were the ones to unify the #E Jomon#! of #T Honshu#!! Unfortunately, unlike the neighboring #E Yayoi#!, the #E Jomon#! tribes are much less related to one another. We need to put in extra work before us three groups can truly become one."
+ emishi_missions_task_11_DESC:0 "We the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|E] were the ones to unify the #E Jomon#! of #T Honshu#!! Unfortunately, unlike the neighboring #E Yayoi#!, the #E Jomon#! tribes are much less related to one another. We need to put in extra work before us three groups can truly become one."
 
- emishi_missions_task_12:0 "The [GetCulture('wa').GetName|Y] Elite"
- emishi_missions_task_12_DESC:0 "[GetCulture('wa').GetName|Y] is our primary culture. Any other #E Jomon#! culture is as distant to us than the #E Yayoi#!! We should establish a primacy over all other #E Jomons#! and use it as a basis for our new #Y Emishi#! culture!\n\n#E This will effect which #Y pops#! are converted to #Y Emishi#! culture."
+ emishi_missions_task_12:0 "The [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|E] Elite"
+ emishi_missions_task_12_DESC:0 "[SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|E] is our primary culture. Any other #E Jomon#! culture is as distant to us than the #E Yayoi#!! We should establish a primacy over all other #E Jomons#! and use it as a basis for our new #Y Emishi#! culture!\n\n#E This will effect which #Y pops#! are converted to #Y Emishi#! culture."
 
  emishi_missions_task_13:0 "#E Jomon#! Together Strong"
  emishi_missions_task_13_DESC:0 "All three of our peoples share one thing in common: our land has been infringed upoon by the #E Yayoi#!. In promoting cultural unity, we will be born anew as an all-inclusive #Y Emishi#! culture!\n\n#E This will effect which #Y pops#! are converted to #Y Emishi#! culture."
@@ -269,21 +269,42 @@
  emishi_missions_task_14:0 "Emergent Emishi Culture"
  emishi_missions_task_14_DESC:0 "Whether through establishing an elite class above others or by establishing a mutual understanding between them, our efforts will pay off. A new emergent #Y Emishi#! culture will be adopted. As time progresses, so too will this culture develop into something greater than its original form."
 
+ emishi_missions_task_15:0 "Mend Yayoi Relations"
+ emishi_missions_task_15_DESC:0 "The #Y Yayoi#! are our enemies no more or less than the rival #Y Jomon#! tribes. Although they are much more centralized than us, we are dominant over them now, and we can exploit this relationship.\n\nThis will add #G 1 point#! towards #Y Yayoification#!."
+
+ emishi_missions_task_16:0 "End Yayoi Relations"
+ emishi_missions_task_16_DESC:0 "The #Y Yayoi#! are our primary enemies in #E Wa#!. We must execute their leaders and replace them with #Y Jomon#! ones. We will be able to also annex this vassal later down the line.\n\nThis will subtract #G 1 point#! towards #Y Yayoification#!."
+
 #Tooltips
  sirakawa_settle_tt:0 "Immediately #Y colonize#! all #Y uncolonized#! provinces with #E Sirakawa#! culture."
  need_food_building_tt:0 "Any owned province has a #Y Farming Settlement#! building."
  oratory_focus_tree_enabled_tt:0 "[ROOT.GetCountry.GetRulerTitle|E] [ROOT.GetCountry.GetRuler.GetPraenomen|E] has the #Y Oratory Character Focus#!."
- yayoification_add_1_tt:0 "#Y Yayoification#! increases by #G 1#! point."
  tohoku_claims_tt:0 "[SCOPE.GetRootScope.GetCountry.GetName|E] gain claims on the #Y Tohoku#! area."
  hokkaido_claims_tt:0 "[SCOPE.GetRootScope.GetCountry.GetName|E] gain claims on the #Y Hokkaido#! area."
  japan_culture_neighbor_tt:0 "The state culture is #Y Yayoi#!."
  neighbor_is_subject_tt:0 "The state is a subject of [SCOPE.GetRootScope.GetCountry.GetName|E]."
+ sunazawa_hokkaido_tt:0 "We will decide what to do with #E Hokkaido#!."
+ annex_hokkaido_tt:0 "We choose to #E annex#! all of #E Hokkaido#!."
+ vassal_hokkaido_tt:0 "We choose to #E vassalize#! all of #E Hokkaido#!."
+ yayoi_subject_mend_tt:0 "Any #Y Yayoi#! subject of ours has a loyalty greater than #G 75#!."
+ yayoi_subject_end_tt:0 "Any #Y Yayoi#! subject of ours has a loyalty less than #R 35#!."
+ miyako_capital_tt:0 "We have #E migrated#! or moved our capital to [GetProvince('(int32)10564').GetName|E]."
+ mutsu_capital_tt:0 "We have #E migrated#! or moved our capital to [GetProvince('(int32)10561').GetName|E]."
 
 #Modifiers
  emishi_tactics:0 "Hit and Run Tactics"
  secret_of_rice:0 "Secrets of Rice"
  emishi_elite:0 "Emishi Elitism"
  emishi_equal:0 "Emishi Equality"
+ emishi_assimilation:0 "Emergent Emishi Culture"
+ push_back_emishi:0 "Galvinized Reconquest"
+ jomon_jamboree:0 "Jomon Jamboree"
+ sunazawa_dominance:0 "Sunazawa-Ezo Syncretism"
+ oshima_vassal_mod:0 "Oshima-Sunazawa State"
+ oshima_buff_tt:0 "#E Oshima#! gains #Y 10% Commerce Modifier#! and #Y 10% Population Happiness Modifier#!."
+ yayoi_mend:0 "Exploitation of Yayoi"
+ yayoi_end:0 "Antagonization of Yayoi"
+ merchants_by_day:0 "Migratory Merchants"
 
 #Decisions
 
@@ -291,6 +312,8 @@
  emishi_electric:0 "Elegence of the Emishi"
  emishi_name:0 "Emishi"
  emishi_adj:0 "Emishi"
+ oshima:0 "Oshima"
+ ocean_man_adj:0 "Oshima"
 
 #Events
  me_emishi_1_title:0 "$emishi_missions_task_1$"
@@ -300,12 +323,12 @@
 
  me_emishi_2_title:0 "$emishi_missions_task_2$"
  me_emishi_2_desc:0 "The secret of rice goes far back in #E Wa#! history. It was because of the implementation of rice that the #E Yayoi#! population would grow so large so quickly while #E Jomon#! populations continued to dwindle. Now the tables will be turned surely."
- me_emishi_2.a:0 "Rice will raise our numbers by thrice!"
+ me_emishi_2.a:0 "And so comes the rise of rice"
  me_emishi_2_tooltip:0 "The mission task '#Y $emishi_missions_task_2$#!' has now been #G Completed#!!"
 
  me_emishi_3_title:0 "$emishi_missions_task_3$"
- me_emishi_3_desc:0 ""
- me_emishi_3.a:0 ""
+ me_emishi_3_desc:0 "Merchants by day, migrants by night. Thus is the life of a #E Sirakawan#!. We have settled in our mountains for long enough, it is time to migrate to the coast. Surely, we will come back to our old home someday."
+ me_emishi_3.a:0 "Goodbye mountains, hello beaches."
  me_emishi_3_tooltip:0 "The mission task '#Y $emishi_missions_task_3$#!' has now been #G Completed#!!"
 
  me_emishi_4_title:0 "$emishi_missions_task_4$"
@@ -314,58 +337,69 @@
  me_emishi_4_tooltip:0 "The mission task '#Y $emishi_missions_task_4$#!' has now been #G Completed#!!"
 
  me_emishi_5_title:0 "$emishi_missions_task_5$"
- me_emishi_5_desc:0 ""
- me_emishi_5.a:0 ""
+ me_emishi_5_desc:0 "The many #E Jomon#! of northern #E Honshu#!, or #E Tohoku#!, are spread across the region. The tribes are in utter disunity, and have frankly never thought to be unified before. Reeling in the tribes is a great mission. We have captured all the cultural centers of the tribes, and this #E Jomon Jamboree#! will soon end."
+ me_emishi_5.a:0 "Ah, no more tribal raids... right?"
  me_emishi_5_tooltip:0 "The mission task '#Y $emishi_missions_task_5$#!' has now been #G Completed#!!"
 
  me_emishi_6_title:0 "$emishi_missions_task_6$"
- me_emishi_6_desc:0 ""
- me_emishi_6.a:0 ""
+ me_emishi_6_desc:0 "The #E Yayoi#! have been pacified! They are now under our overlordship; they are our vassals. The question remains... what to do with this vassal? Shall we punish them for ever pushing our people back so far... or should we reap the benefits of having a #E Yayoi#! tribe directly under us. All their secrets could be ours."
+ me_emishi_6.a:0 "Our momentum grows!"
  me_emishi_6_tooltip:0 "The mission task '#Y $emishi_missions_task_6$#!' has now been #G Completed#!!"
 
  me_emishi_7_title:0 "$emishi_missions_task_7$"
- me_emishi_7_desc:0 ""
- me_emishi_7.a:0 ""
+ me_emishi_7_desc:0 "The #E Dewa#! once dominated much of the northern coast of #E Kaga#!, and it has finally been reclaimed! The island of #E Sado#! was to be one of the final holdouts of #E Jomon#! culture on the #E Wa#! mainland, and serves as a pirate port as many smaller islands of #E Wa#! are. Now that this coast is ours, our navy is bolstered."
+ me_emishi_7.a:0 "The seas are ours!"
  me_emishi_7_tooltip:0 "The mission task '#Y $emishi_missions_task_7$#!' has now been #G Completed#!!"
 
  me_emishi_8_title:0 "$emishi_missions_task_8$"
- me_emishi_8_desc:0 ""
- me_emishi_8.a:0 ""
+ me_emishi_8_desc:0 "The island of #E Ezogashima#!, inhabited by the disparate #E Ezo#! tribes has always been of interest for the #E Sunazawa#!. With it now completely under our control, we have two options. Directly annex the land into our formal territory, or prop up a #E Feudatory#! state based in [GetProvince('(int32)10567').GetName|E]."
+ me_emishi_8.a:0 "We will annex them whole."
+ me_emishi_8.b:0 "They will be our puppets."
  me_emishi_8_tooltip:0 "The mission task '#Y $emishi_missions_task_8$#!' has now been #G Completed#!!"
 
  me_emishi_9_title:0 "$emishi_missions_task_9$"
- me_emishi_9_desc:0 ""
- me_emishi_9.a:0 ""
+ me_emishi_9_desc:0 "Our migration to the coast and subsequent centralization has attracted many of our fellow #E Sirakawans#! to our tribe. We can now establish a proper #E Tribal Federation#! and have a monopoly over the eastern #E Tohoku#! coast"
+ me_emishi_9.a:0 "Money! Mountains! And Monopoly!"
  me_emishi_9_tooltip:0 "The mission task '#Y $emishi_missions_task_9$#!' has now been #G Completed#!!"
 
  me_emishi_10_title:0 "$emishi_missions_task_10$"
- me_emishi_10_desc:0 ""
- me_emishi_10.a:0 ""
+ me_emishi_10_desc:0 "We have become the sole power over the land of #E Tohoku#!! The #E Yayoi#! often call us #E Emishi#!, perhaps as a derogatory, but there is an idea of unification using this broad term. We will claim this term as our own, and form a new #E Emishi#! state."
+ me_emishi_10.a:0 "We are Emishi, and we are proud!"
  me_emishi_10_tooltip:0 "The mission task '#Y $emishi_missions_task_10$#!' has now been #G Completed#!!"
 
  me_emishi_11_title:0 "$emishi_missions_task_11$"
- me_emishi_11_desc:0 ""
- me_emishi_11.a:0 ""
+ me_emishi_11_desc:0 "The disparate differences between different #E Jomon#! groups are complicated. Although we all are considered #E 'Jomon,'#! the reality is that we are much less alike compared to the different #E Yayoi#! groups. It will take a skilled person to attempt to unify all these groups into one #E Emishi#! culture across all of #E Jomon#! settled #E Wa#!."
+ me_emishi_11.a:0 "And #E I#! am the one who will do it!"
  me_emishi_11_tooltip:0 "The mission task '#Y $emishi_missions_task_11$#!' has now been #G Completed#!!"
 
  me_emishi_12_title:0 "$emishi_missions_task_12$"
- me_emishi_12_desc:0 ""
- me_emishi_12.a:0 ""
+ me_emishi_12_desc:0 "The noble [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|E] should be in power. It is we who unified these lands we call home, and it is we who will rule over all other #E Jomon#!! As we push for a [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|E] ruling class, this will have an effect on how many people will be willing to accept a syncretic mono-culture."
+ me_emishi_12.a:0 "[SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|E] are clearly the best."
  me_emishi_12_tooltip:0 "The mission task '#Y $emishi_missions_task_12$#!' has now been #G Completed#!!"
 
  me_emishi_13_title:0 "$emishi_missions_task_13$"
- me_emishi_13_desc:0 ""
- me_emishi_13.a:0 ""
+ me_emishi_13_desc:0 "Although we ourselves are [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|E], we have decided to be benevolent rulers, granting rights to #E Freemen#! of other cultures and our own alike. As we push for a unified #E Jomon#! culture, this decision to promote cross-cultural rights will have an effect on how many people will be willing to accept a syncretic mono-culture."
+ me_emishi_13.a:0 "We will stand together."
  me_emishi_13_tooltip:0 "The mission task '#Y $emishi_missions_task_13$#!' has now been #G Completed#!!"
 
  me_emishi_14_title:0 "$emishi_missions_task_14$"
- me_emishi_14_desc:0 ""
- me_emishi_14.a:0 ""
+ me_emishi_14_desc:0 "A new era has come with a new cultural identity. The #E Emishi#! cultural identity, lead by [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|E] leadership, is a syncretic identity between all the #E Jomon#! groups we dominate. The migrants to the south, the traders to the east, and the warriors to the west. United, we will never falter, especially not to those #E Yayoi#! invadors!"
+ me_emishi_14.a:0 "Enter; the #E Emishi#!."
  me_emishi_14_tooltip:0 "The mission task '#Y $emishi_missions_task_14$#!' has now been #G Completed#!!"
+
+ me_emishi_15_title:0 "$emishi_missions_task_15$"
+ me_emishi_15_desc:0 "The relationship between us and our #E Yayoi#! vassal might seem benevolent to them, however, to us it is very exploitable. We have learned their ways of war, their ways of agriculture, and their ways of life!"
+ me_emishi_15.a:0 "To know thy enemy"
+ me_emishi_15_tooltip:0 "The mission task '#Y $emishi_missions_task_15$#!' has now been #G Completed#!!"
+
+ me_emishi_16_title:0 "$emishi_missions_task_16$"
+ me_emishi_16_desc:0 "The relationship between us and our #E Yayoi#! vassal has been tumultuous. So much so, that we have decided to replace the #E Yayoi#! chief for one of #E Jomon#! descent instead. This will also shift them to being a #E Feudatory#!."
+ me_emishi_16.a:0 "I see this as an absolute win."
+ me_emishi_16_tooltip:0 "The mission task '#Y $emishi_missions_task_16$#!' has now been #G Completed#!!"
 
 
 ## JOMON ##
- jomon_missions_DESCRIPTION:0 "While this era is typically defined by the #E Yayoi Jidai#!, the #E Epi-Jomon Jidai#! , also called the #E Zoku-Jomon Jidai#!, coincides with it. From #E 300BCE - 700CE#!, the long process of #E Yayoification #! of [GetProvince('(int32)9328').GetArea.GetRegion.GetName|E] would continue until the #E Nara Jidai#! in #E 700 CE#!,  leaving only the #E Zoku-Jomon#! of #E Hokkaido#! left.\n\nHowever, history can be diverted if the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] can come together and reforge fate... yet in pursuit of  avoiding the fate of a [GetCulture('wa').GetCultureGroup.GetName|Y] [GetProvince('(int32)9328').GetArea.GetRegion.GetName|E], we may only prove to #R accelerate#! it."
+ jomon_missions_DESCRIPTION:0 "While this era is typically defined by the #E Yayoi Jidai#!, the #E Epi-Jomon Jidai#! , also called the #E Zoku-Jomon Jidai#!, coincides with it. From #E 300BCE - 700CE#!, the long process of #E Yayoification #! of [GetProvince('(int32)9328').GetArea.GetRegion.GetName|E] would continue until the #E Nara Jidai#! in #E 700 CE#!, leaving only the #E Zoku-Jomon#! of #E Hokkaido#! left.\n\nHowever, history can be diverted if the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] can come together and reforge fate... yet in pursuit of  avoiding the fate of a [GetCulture('wa').GetCultureGroup.GetName|Y] [GetProvince('(int32)9328').GetArea.GetRegion.GetName|E], we may only prove to #R accelerate#! it."
  jomon_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] have established a state capable of competing against the [GetCulture('wa').GetCultureGroup.GetName|Y]."
  jomon_missions_BUTTON_TOOLTIP:0 "Write a new chapter in history."
 
