bug fixes to emishi-jomon

--- a/localization/english/acb_countries_l_english.yml
+++ b/localization/english/acb_countries_l_english.yml
@@ -298,8 +298,8 @@
  LUW_ADJ:0 "Lu"
  MIK:1 "Mikuni"
  MIK_ADJ:0 "Mikuni"
- MIT:1 "Mitinooku"
- MIT_ADJ:0 "Mitinooku"
+ MTK:1 "Mitinooku"
+ MTK_ADJ:0 "Mitinooku"
  MNY:1 "Minyue"
  MNY_ADJ:0 "Minyue"
  MOB:1 "Morobiri"
