--- a/localization/english/acb_cultures_l_english.yml
+++ b/localization/english/acb_cultures_l_english.yml
@@ -16,6 +16,7 @@
  saka_g:0 "Saka"
  jomon:0 "Jomon"
  tunguisic:0 "Tungusic"
+ nivkh_group:0 "Nivkh"
  #
  yan:0 "Yan"
  jin:0 "Jin"
@@ -270,6 +271,8 @@ tyrrhenian_femalename:1 "$NAME_MALE$ $REGNALNUMBER$ $FAMILY_MALE$ $NICKNAME$"
  YIMO:0 "Yimo"
  ZHIGOULOU:0 "Zhigoulou"
  HUI:0 "Hui"
+ #
+ OKHOTSK:0 "Okhotsk"
  #
  JIAORAOZHONGYI:0 "Jiaoraozhongyi"
  AILAO:0 "Ailao"
