moved to todo (nivkh names)

--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -1380,3 +1380,78 @@
  form_nanyue: "Form Nanyue"
  form_nanyue_desc: "There are many southern Yue peoples hugging the shore, however, because of their growing fortune, they are constantly being eyed by the Central Plains empires, who just see them as mere vassals. It is time to unite them and lead them to battles against these foreigners."
  
+ 
+Atvuk: "Atvuk"
+Azmun: "Azmun"
+Azrun: "Azrun"
+Chalun: "Chalun"
+Changin: "Changin"
+Chuner: "Chuner"
+Ezdanok: "Ezdanok"
+Itkun: "Itkun"
+Kaskazik: "Kaskazik"
+Kekhan: "Kekhan"
+Kelin: "Kelin"
+Kenran: "Kenran"
+Khaylin: "Khaylin"
+Kokin: "Kokin"
+Lants: "Lants"
+Lergan: "Lergan"
+Longun: "Longun"
+Luzgin: "Luzgin"
+Memzgun: "Memzgun"
+Mufchik: "Mufchik"
+Napuin: "Napuin"
+Nyengun: "Nyengun"
+Nyunkin: "Nyunkin"
+Ochan: "Ochan"
+Palgun: "Palgun"
+Parkizin: "Parkizin"
+Pilgun: "Pilgun"
+Pulychkh: "Pulychkh"
+Pungat: "Pungat"
+Smedun: "Smedun"
+Tavtugin: "Tavtugin"
+Tolvin: "Tolvin"
+Tynvin: "Tynvin"
+Ukrin: "Ukrin"
+Urkayn: "Urkayn"
+Uryam: "Uryam"
+Vadun: "Vadun"
+Vyskan: "Vyskan"
+Ykylak: "Ykylak"
+Yudin: "Yudin"
+Zarun: "Zarun"
+Aisik: "Aisik"
+Anguk: "Anguk"
+Anka: "Anka"
+Anyuk: "Anyuk"
+Ayzik: "Ayzik"
+Azuk: "Azuk"
+Chamuk: "Chamuk"
+Chavlik: "Chavlik"
+Efkuk: "Efkuk"
+Esavura: "Esavura"
+Ezguk: "Ezguk"
+Iglik: "Iglik"
+Khivchuk: "Khivchuk"
+Lidik: "Lidik"
+Liskit: "Liskit"
+Lushkura: "Lushkura"
+Lykhtkk: "Lykhtkk"
+Niftyuk: "Niftyuk"
+Nygvik: "Nygvik"
+Okhnik: "Okhnik"
+Panko: "Panko"
+Pineyk: "Pineyk"
+Ponashk: "Ponashk"
+Pygsk: "Pygsk"
+Pygzyk: "Pygzyk"
+Pylymk: "Pylymk"
+Tatuk: "Tatuk"
+Tymguk: "Tymguk"
+Ulita: "Ulita"
+Umkhun: "Umkhun"
+Velk: "Velk"
+Yurik: "Yurik"
+Zuyuk: "Zuyuk"
