solid chunk of jomon formable tree

--- a/localization/english/missions/jomon_missions_l_english.yml
+++ b/localization/english/missions/jomon_missions_l_english.yml
@@ -399,20 +399,208 @@
 
 
 ## JOMON ##
- jomon_missions_DESCRIPTION:0 "While this era is typically defined by the #E Yayoi Jidai#!, the #E Epi-Jomon Jidai#! , also called the #E Zoku-Jomon Jidai#!, coincides with it. From #E 300BCE - 700CE#!, the long process of #E Yayoification #! of [GetProvince('(int32)9328').GetArea.GetRegion.GetName|E] would continue until the #E Nara Jidai#! in #E 700 CE#!, leaving only the #E Zoku-Jomon#! of #E Hokkaido#! left.\n\nHowever, history can be diverted if the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] can come together and reforge fate... yet in pursuit of  avoiding the fate of a [GetCulture('wa').GetCultureGroup.GetName|Y] [GetProvince('(int32)9328').GetArea.GetRegion.GetName|E], we may only prove to #R accelerate#! it."
- jomon_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] have established a state capable of competing against the [GetCulture('wa').GetCultureGroup.GetName|Y]."
- jomon_missions_BUTTON_TOOLTIP:0 "Write a new chapter in history."
+l_english:
+ jomon_honshu_missions:0 "A New Jomon Jidai"
+ jomon_honshu_missions_DESCRIPTION:0 "The #E Yayoi Jidai#! must now compete directly with the #E Epi-Jomon Jidai#! in the region of #E Honshu#!. In fact, we may as well stop calling it the #E Epi-Jomon Jidai#!, for now it is truly a #E Neo-Jomon Jidai#!! From the northern regions, to now nearly the whole of the largest island of [GetProvince('(int32)9328').GetArea.GetRegion.GetName|E].\n\nWe were once disparate tribes and cultures, pushed back by the #Y Yayoi#!, but now we sit in prime position to dominate the rest of [GetProvince('(int32)9328').GetArea.GetRegion.GetName|E] uncontested. We must decide how much to #E adopt#!, how much to #E reject#!, and how far we will reclaim for the noble #Y Jomon#! peoples."
+ jomon_honshu_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] have completed their domination of [GetProvince('(int32)9328').GetArea.GetRegion.GetName|E]."
+ jomon_honshu_missions_BUTTON_TOOLTIP:0 "The #E Jomon Jidai#! starts anew!"
 
 #Missions
 
+ jomon_honshu_missions_task_1:0 "The Duality of Jo-Man"
+ jomon_honshu_missions_task_1_DESC:0 ""
+ 
+ jomon_honshu_missions_task_2:0 "Honor the Spirits"
+ jomon_honshu_missions_task_2_DESC:0 ""
+ 
+ jomon_honshu_missions_task_3:0 "Pots and Pans"
+ jomon_honshu_missions_task_3_DESC:0 ""
+ 
+ jomon_honshu_missions_task_4:0 "The Bone of My Sword"
+ jomon_honshu_missions_task_4_DESC:0 ""
+ 
+ jomon_honshu_missions_task_5:0 "A Feast of Victory"
+ jomon_honshu_missions_task_5_DESC:0 ""
+ 
+ jomon_honshu_missions_task_6:0 "Smooth Pottery"
+ jomon_honshu_missions_task_6_DESC:0 ""
+ 
+ jomon_honshu_missions_task_7:0 "Cord Pottery"
+ jomon_honshu_missions_task_7_DESC:0 ""
+ 
+ jomon_honshu_missions_task_8:0 "The Bronze Age"
+ jomon_honshu_missions_task_8_DESC:0 ""
+ 
+ jomon_honshu_missions_task_9:0 "A Neo-Neolithic"
+ jomon_honshu_missions_task_9_DESC:0 ""
+ 
+ jomon_honshu_missions_task_10:0 "The Price of Rice"
+ jomon_honshu_missions_task_10_DESC:0 ""
+ 
+ jomon_honshu_missions_task_11:0 "The Fruit of Labor"
+ jomon_honshu_missions_task_11_DESC:0 ""
+ 
+ jomon_honshu_missions_task_12:0 "Bronze Magatamas"
+ jomon_honshu_missions_task_12_DESC:0 ""
+ 
+ jomon_honshu_missions_task_13:0 "No Pain, No Grain"
+ jomon_honshu_missions_task_13_DESC:0 ""
+ 
+ jomon_honshu_missions_task_14:0 "Bronze Fishing Hooks"
+ jomon_honshu_missions_task_14_DESC:0 ""
+ 
+ jomon_honshu_missions_task_15:0 "Red Foxen Fantasy"
+ jomon_honshu_missions_task_15_DESC:0 ""
+ 
+ jomon_honshu_missions_task_16:0 "Hearth in our Hearts"
+ jomon_honshu_missions_task_16_DESC:0 ""
+ 
+ jomon_honshu_missions_task_17:0 "Cironup-Inari Shrines"
+ jomon_honshu_missions_task_17_DESC:0 ""
+ 
+ jomon_honshu_missions_task_18:0 "Famed Flame Pots"
+ jomon_honshu_missions_task_18_DESC:0 ""
+ 
+ jomon_honshu_missions_task_19:0 "Otakus for Dotakus"
+ jomon_honshu_missions_task_19_DESC:0 ""
+ 
+ jomon_honshu_missions_task_20:0 "Dogged Dogu Production"
+ jomon_honshu_missions_task_20_DESC:0 ""
+
+ jomon_honshu_missions_task_21:0 "A Tale of Four Islands"
+ jomon_honshu_missions_task_21_DESC:0 ""
+
+ jomon_honshu_missions_task_22:0 "Beauty of Hokkaido"
+ jomon_honshu_missions_task_22_DESC:0 ""
+
+ jomon_honshu_missions_task_23:0 "Harmony in Honshu"
+ jomon_honshu_missions_task_23_DESC:0 ""
+
+ jomon_honshu_missions_task_24:0 "Capital of Harmony"
+ jomon_honshu_missions_task_24_DESC:0 ""
+
+ jomon_honshu_missions_task_25:0 "Kii to the West"
+ jomon_honshu_missions_task_25_DESC:0 ""
+
+ jomon_honshu_missions_task_26:0 "Shikoku Shorlines"
+ jomon_honshu_missions_task_26_DESC:0 ""
+
+ jomon_honshu_missions_task_27:0 "If the Kyushu Fits"
+ jomon_honshu_missions_task_27_DESC:0 ""
+
+ jomon_honshu_missions_task_28:0 "The Distant Duuchuu"
+ jomon_honshu_missions_task_28_DESC:0 ""
+
+ jomon_honshu_missions_task_29:0 "The Jeulmeun Colony"
+ jomon_honshu_missions_task_29_DESC:0 ""
+ 
+ 
 #Tooltips
  yayoification_add_1_tt:0 "#Y Yayoification#! increases by #G 1#! point."
  yayoification_sub_1_tt:0 "#Y Yayoification#! decreases by #G 1#! point."
  
+ 
 #Modifiers
-
-#Decisions
-
-#Others
-
+ 
+ 
+ 
 #Events
+ me_honshu_1_title:0 "$jomon_honshu_missions_task_1$"
+ me_honshu_1_desc:0 ""
+ me_honshu_1.a:0 ""
+ me_honshu_1_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_1$#!' has now been #G Completed#!!"
+ 
+ me_honshu_2_title:0 "$jomon_honshu_missions_task_2$"
+ me_honshu_2_desc:0 ""
+ me_honshu_2.a:0 ""
+ me_honshu_2_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_2$#!' has now been #G Completed#!!"
+ 
+ me_honshu_3_title:0 "$jomon_honshu_missions_task_3$"
+ me_honshu_3_desc:0 ""
+ me_honshu_3.a:0 ""
+ me_honshu_3_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_3$#!' has now been #G Completed#!!"
+ 
+ me_honshu_4_title:0 "$jomon_honshu_missions_task_4$"
+ me_honshu_4_desc:0 ""
+ me_honshu_4.a:0 ""
+ me_honshu_4_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_4$#!' has now been #G Completed#!!"
+ 
+ me_honshu_5_title:0 "$jomon_honshu_missions_task_5$"
+ me_honshu_5_desc:0 ""
+ me_honshu_5.a:0 ""
+ me_honshu_5_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_5$#!' has now been #G Completed#!!"
+ 
+ me_honshu_6_title:0 "$jomon_honshu_missions_task_6$"
+ me_honshu_6_desc:0 ""
+ me_honshu_6.a:0 ""
+ me_honshu_6_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_6$#!' has now been #G Completed#!!"
+ 
+ me_honshu_7_title:0 "$jomon_honshu_missions_task_7$"
+ me_honshu_7_desc:0 ""
+ me_honshu_7.a:0 ""
+ me_honshu_7_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_7$#!' has now been #G Completed#!!"
+ 
+ me_honshu_8_title:0 "$jomon_honshu_missions_task_8$"
+ me_honshu_8_desc:0 ""
+ me_honshu_8.a:0 ""
+ me_honshu_8_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_8$#!' has now been #G Completed#!!"
+ 
+ me_honshu_9_title:0 "$jomon_honshu_missions_task_9$"
+ me_honshu_9_desc:0 ""
+ me_honshu_9.a:0 ""
+ me_honshu_9_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_9$#!' has now been #G Completed#!!"
+ 
+ me_honshu_10_title:0 "$jomon_honshu_missions_task_10$"
+ me_honshu_10_desc:0 ""
+ me_honshu_10.a:0 ""
+ me_honshu_10_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_10$#!' has now been #G Completed#!!"
+ 
+ me_honshu_11_title:0 "$jomon_honshu_missions_task_11$"
+ me_honshu_11_desc:0 ""
+ me_honshu_11.a:0 ""
+ me_honshu_11_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_11$#!' has now been #G Completed#!!"
+ 
+ me_honshu_12_title:0 "$jomon_honshu_missions_task_12$"
+ me_honshu_12_desc:0 ""
+ me_honshu_12.a:0 ""
+ me_honshu_12_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_12$#!' has now been #G Completed#!!"
+ 
+ me_honshu_13_title:0 "$jomon_honshu_missions_task_13$"
+ me_honshu_13_desc:0 ""
+ me_honshu_13.a:0 ""
+ me_honshu_13_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_13$#!' has now been #G Completed#!!"
+ 
+ me_honshu_14_title:0 "$jomon_honshu_missions_task_14$"
+ me_honshu_14_desc:0 ""
+ me_honshu_14.a:0 ""
+ me_honshu_14_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_14$#!' has now been #G Completed#!!"
+ 
+ me_honshu_15_title:0 "$jomon_honshu_missions_task_15$"
+ me_honshu_15_desc:0 ""
+ me_honshu_15.a:0 ""
+ me_honshu_15_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_15$#!' has now been #G Completed#!!"
+ 
+ me_honshu_16_title:0 "$jomon_honshu_missions_task_16$"
+ me_honshu_16_desc:0 ""
+ me_honshu_16.a:0 ""
+ me_honshu_16_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_16$#!' has now been #G Completed#!!"
+ 
+ me_honshu_17_title:0 "$jomon_honshu_missions_task_17$"
+ me_honshu_17_desc:0 ""
+ me_honshu_17.a:0 ""
+ me_honshu_17_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_17$#!' has now been #G Completed#!!"
+ 
+ me_honshu_18_title:0 "$jomon_honshu_missions_task_18$"
+ me_honshu_18_desc:0 ""
+ me_honshu_18.a:0 ""
+ me_honshu_18_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_18$#!' has now been #G Completed#!!"
+ 
+ me_honshu_19_title:0 "$jomon_honshu_missions_task_19$"
+ me_honshu_19_desc:0 ""
+ me_honshu_19.a:0 ""
+ me_honshu_19_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_19$#!' has now been #G Completed#!!"
+ 
+ me_honshu_20_title:0 "$jomon_honshu_missions_task_20$"
+ me_honshu_20_desc:0 ""
+ me_honshu_20.a:0 ""
+ me_honshu_20_tooltip:0 "The mission task '#Y $jomon_honshu_missions_task_20$#!' has now been #G Completed#!!" 
