xiongnu mission loc all trees done (first pass, some typos still)

--- a/localization/english/missions/xiongnu_missions_2_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_2_l_english.yml
@@ -1,14 +1,14 @@
 ﻿l_english:
 
  xiongnu_missions_2: "Expansion of the Xiongnu"
- xiongnu_missions_2_DESCRIPTION: "Historically, the Xiongnu would unite around Modun in the later 3rd century BC after his coup against his father Touman Luandi, immediately setting forth to exact vengeance on the Yuezhi, and then absorbing dozens of tribes speaking as many languages into the Xiongnu Confederation. To the west, south and east, the Xiongnu would gobble up all opposition, and redirect the might of the entire Eastern Steppe unto the lands of the Middle Kingdom, successfully vassalizing the Han dynasty by the 2nd century BC. The time has come to relive this history and expand upon it."
+ xiongnu_missions_2_DESCRIPTION: "Historically, the Xiongnu would unite around Modun in the later 3rd century BC after his coup against his father Touman Luandi, immediately setting forth to exact vengeance on the [GetCountry('YEZ').GetName], and then absorbing dozens of tribes speaking as many languages into the Xiongnu Confederation. To the west, south and east, the Xiongnu would gobble up all opposition, and redirect the might of the entire Eastern Steppe unto the lands of the Middle Kingdom, successfully vassalizing the Han dynasty by the 2nd century BC. The time has come to relive this history and expand upon it."
  xiongnu_missions_2_CRITERIA_DESCRIPTION: "This mission will be completed when the Xiongnu have struck out in all directions to create a vast steppe empire."
  xiongnu_missions_2_BUTTON_TOOLTIP: "The world has only just begun to feel the might of Xiongnu horse and iron!"
 
 #Missions
 
  xiongnu_missions_2_task_1: "Subjugate Yuezhi"
- xiongnu_missions_2_task_1_DESC: "The bane of our existence for centuries - the Yuezhi - must pay for their treachery against the great Chanyu Modun. The time has come, and our hooves are ready, to finally put an end to our greatest rival in the region. The Yuezhi shall be exterminated."
+ xiongnu_missions_2_task_1_DESC: "The bane of our existence for centuries - the [GetCountry('YEZ').GetName] - must pay for their treachery against the great Chanyu Modun. The time has come, and our hooves are ready, to finally put an end to our greatest rival in the region. The [GetCountry('YEZ').GetName] shall be exterminated."
 
  xiongnu_missions_2_task_2: "Luandi Dynasty"
  xiongnu_missions_2_task_2_DESC: "The greatness of Modun to forge a steppe empire from such a diverse set peoples across Asia attests to the vitality of the Luandi bloodline. Forever will the descendants of Modun be respected and feared as the progeny of the greatest horselord to have ever lived."
@@ -20,7 +20,7 @@
  xiongnu_missions_2_task_4_DESC: "The Hu nomads to our east continue to challenge the integrity of our eastern borders, and compete for pasturelands east of the Gobi and Lake Baikal. While they have served as a buffer between our confederation and that of the Donghu, we can no longer afford their antics on our borders."
 
  xiongnu_missions_2_task_5: "Secure Shanma"
- xiongnu_missions_2_task_5_DESC: "The crushing defeat of the Yuezhi have left us as the dominant force in the Hexi corridor, but that does not mean the vast trade wealth of the region is totally in our hands. We must fully secure the corridor and the burgeoning Silk Road trade between China and the Tocharians of the Tarim Basin."
+ xiongnu_missions_2_task_5_DESC: "The crushing defeat of the [GetCountry('YEZ').GetName] have left us as the dominant force in the Hexi corridor, but that does not mean the vast trade wealth of the region is totally in our hands. We must fully secure the corridor and the burgeoning Silk Road trade between China and the Tocharians of the Tarim Basin."
 
  xiongnu_missions_2_task_6: "Laoshang"
  xiongnu_missions_2_task_6_DESC: "The politics of the steppe necessitate continuous demonstration of power against those who would challenge the rule of the Chanyu, lest our rule be delegitimized. Upstart tribal elites may find it tempting to vye for the position of Chanyu, until we put them in their place."
