--- a/localization/english/missions/xiongnu_missions_3_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_3_l_english.yml
@@ -188,24 +188,24 @@
  me_xiongnu_3_17.a:0 "Only the finest horses for the Chanyu!"
 
  me_xiongnu_3_18_title:0 "$xiongnu_missions_3_task_18$"
- me_xiongnu_3_18_desc:0 "The holy city of Chengzhou, along with the seats of power for the rival Zhou kings at gong and Wangcheng, are all now within the hands of the Chanyu! This is the greatest achievement yet realize by the Xiongnu, and represents the fulfillment of visions of the Great Chanyu Modun when he rode out for conquest against the Middle Kingdom after defeating the Yuezhi. The holy objects of Huaxia civilization, including the sacred Jiu Ding, are now controlled by you my lord, lending full legitmacy of your rule over China! Two roads now lay before us - embracing the title of Son of Heaven and ruling over the Chinese, or maintaing the ways of our ancestors by abolishing the Middle Kingdom and ending their millenia old traditions."
- me_xiongnu_3_18.a:0 "The fate of the Middle Kingdom lay before us..."
+ me_xiongnu_3_18_desc:0 "The holy city of Chengzhou, along with the seats of power for the rival Zhou kings at gong and Wangcheng, are all now within the hands of the Chanyu! This is the greatest achievement yet realize by the Xiongnu, and represents the fulfillment of visions of the Great Chanyu Modun when he rode out for conquest against the Middle Kingdom after defeating the Yuezhi. The holy objects of Huaxia civilization, including the sacred Jiu Ding, are now controlled by you my lord, lending full legitmacy of your rule over China! Our tribal host could not contain their bloodlust as they entered the city, slaughtering all who stood in their path as they rushed to take their share of the loot from the holy city."
+ me_xiongnu_3_18.a:0 "The fate of the Chengzhou lay before us..."
  
- me_xiongnu_3_1800_title:0 "$xiongnu_missions_3_task_18$"
+ me_xiongnu_3_1800_title:0 "The Sack of Chengzhou"
  me_xiongnu_3_1800_desc:0 ""
- me_xiongnu_3_1800.a:0 ""
+ me_xiongnu_3_1800.a:0 "This won't end well for the people of Chengzhou..."
  
- me_xiongnu_3_1801_title:0 "$xiongnu_missions_3_task_18$"
- me_xiongnu_3_1801_desc:0 ""
- me_xiongnu_3_1801.a:0 ""
+ me_xiongnu_3_1801_title:0 "Chengzhou on Fire"
+ me_xiongnu_3_1801_desc:0 "On the first day of the sack of the city, multiple fires broke out in the elite districts and royal palace of the Zhou kings. The tribal warriors carted off untold sums of gold, porcelain objects, jewels and many other objects of value from the burning buildings, slaughtering any who dared to protect their belongings. The wise among them would attempt to hide or flee, with many still perishing in the flames of being taken as slaves. The Chanyu was said to have become the wealthiest man in the world that day."
+ me_xiongnu_3_1801.a:0 "This is pure carnage..."
  
- me_xiongnu_3_1802_title:0 "$xiongnu_missions_3_task_18$"
- me_xiongnu_3_1802_desc:0 ""
- me_xiongnu_3_1802.a:0 ""
+ me_xiongnu_3_1802_title:0 "The City Burns"
+ me_xiongnu_3_1802_desc:0 "On the second day, the fire spread to the main residential quarters of the city, burning the homes of the upper classes and commonfolk alike. Many would perish attempting to flee, being cut down as they ran into our cavalry, who were taking all they could out of the houses before they were burned down. The wealth of the entire populace of the city was now being extracted, and most buildings turning to ash, as the Chanyu spent his time gleening the royal palace compound for treasures stored in hidden compartments throughout the complex."
+ me_xiongnu_3_1802.a:0 "Chengzhou continues to burn..."
  
- me_xiongnu_3_1803_title:0 "$xiongnu_missions_3_task_18$"
- me_xiongnu_3_1803_desc:0 ""
- me_xiongnu_3_1803.a:0 ""
+ me_xiongnu_3_1803_title:0 "A City in Ruin"
+ me_xiongnu_3_1803_desc:0 "On the last day, the smoke began to clear, and the horror of what had happened was finally coming into focus. Burned bodies, boiled blood stains and smoldering ruins were to be found in eighty percent of the city, with only a few areas near the river remaining intact. The husk of the royal palace was the new headquarters of the Chanyu, from which he finally proclaimed an end to the sack. The vast majority of the population was dead or enslaved, with the remaining residents ordered to begin clearing the city of rubble and burying the bodies of the dead."
+ me_xiongnu_3_1803.a:0 "There is hardly anything left of this once great city."
 
  me_xiongnu_3_19_title:0 "$xiongnu_missions_3_task_19$"
  me_xiongnu_3_19_desc:0 "With the systemic enslavement of the Huaxia peoples, the dreams of our ancestors are finally realized. The great stone cities which resisted our subjugation are now fallen, their people now all servants of our Great Chanyu and the Xiongnu Empire. Their hardships will be our gain, for the enslavement of millions will be a boon to the production of food and luxury goods which the Chanyu craves. However, brutal domination of the Chinese serves a more sinister purpose - to break any will of resistance to our rule."
