--- a/localization/english/missions/xiongnu_missions_3_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_3_l_english.yml
@@ -192,7 +192,7 @@
  me_xiongnu_3_18.a:0 "The fate of the Chengzhou lay before us..."
  
  me_xiongnu_3_1800_title:0 "The Sack of Chengzhou"
- me_xiongnu_3_1800_desc:0 ""
+ me_xiongnu_3_1800_desc:0 "The Chanyu stood before the city which now lay in his hands, his tribesmen begining to clamor to sack the city. He knew he would not be able to hold back the appetite of the tribesmen, so the Chanyu led the charge into the heart of the city, cutting down anyone in their path. Random looting began to occur on the way to the royal quarters, with tribal host being careful to not take anything that the Chanyu had set his eyes one. In the chaos of the destruction and death, a few fires began to be reported in the path between the city gates and the royal palace..."
  me_xiongnu_3_1800.a:0 "This won't end well for the people of Chengzhou..."
  
  me_xiongnu_3_1801_title:0 "Chengzhou on Fire"
